# mastr-export

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  download-and-extract-sqlite.sh  export-all-formats.sh  extract-sqlite.sh  pyproject.toml
caddy/: Caddyfile  run
deploy/: Dockerfile  datasette
export/: finish  run
mastr-export/: __main__.py  download.py  parser.py  spec.py
mastr-export/spec_data/: AnlagenEegBiomasse.yaml  AnlagenEegGeothermieGrubengasDruckentspannung.yaml  AnlagenEegSolar.yaml  AnlagenEegSpeicher.yaml  EinheitenAenderungNetzbetreiberzuordnungen.yaml  EinheitenGeothermieGrubengasDruckentspannung.yaml  EinheitenSolar.yaml  EinheitenVerbrennung.yaml  Ertuechtigungen.yaml  GeloeschteUndDeaktivierteMarktakteure.yaml  Gesamtdatenexport.yaml
mastr_export/: __main__..py  __main__.py  cli.py  spec.py  xsd_parser.py
mastr_export/spec_data/: AnlagenEegBiomasse.yaml  AnlagenEegGeothermieGrubengasDruckentspannung.yaml  AnlagenEegSolar.yaml  AnlagenEegSpeicher.yaml  AnlagenEegWasser.yaml  AnlagenEegWind.yaml  AnlagenGasSpeicher.yaml  AnlagenKwk.yaml  AnlagenStromSpeicher.yaml  Bilanzierungsgebiete.yaml  EinheitenAenderungNetzbetreiberzuordnungen.yaml  EinheitenBiomasse.yaml  EinheitenGasErzeuger.yaml  EinheitenGasSpeicher.yaml  EinheitenGasverbraucher.yaml  EinheitenGenehmigung.yaml  EinheitenGeothermieGrubengasDruckentspannung.yaml  EinheitenKernkraft.yaml  EinheitenSolar.yaml  EinheitenStromSpeicher.yaml  (+16 more)
prometheus/: prometheus.yaml  run
spec/: AnlagenEegWind.yaml  Marktakteure.yaml  Netzanschlusspunkte.yaml
trinoli/: finish  run
(+2 files in other folders)
